--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,28 +1,20 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
-client_id = "YOUR_CLIENT_ID"
+client_id = "2e3c83cf5137ea1144373e0b5fe9c0dd"
+organization_id = "154347161"
 name = "shop-chat-agent"
-handle = "shop-chat-agent"
-application_url = "https://shop-chat-agent.com"
+application_url = "https://shop-chat-agent-whatsapp.onrender.com"
 embedded = true
 
 [build]
-include_config_on_deploy = true
+automatically_update_urls_on_dev = true
 
 [webhooks]
-api_version = "2025-04"
+api_version = "2025-10"
 
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "customer_read_customers,customer_read_orders,customer_read_store_credit_account_transactions,customer_read_store_credit_accounts,unauthenticated_read_product_listings"
 
 [auth]
-redirect_urls = [ "https://shop-chat-agent.com/api/auth" ]
-
-[pos]
-embedded = false
-
-[mcp.customer_authentication]
-redirect_uris = [
-  "https://shop-chat-agent.com/callback"
-]
+redirect_urls = [ "https://shop-chat-agent-whatsapp.onrender.com/api/auth" ]
