--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "prisma": "prisma",
     "graphql-codegen": "graphql-codegen",
     "vite": "vite",
-    "postdeploy": "npx prisma migrate deploy"
+    "postdeploy": "npx prisma db push"
   },
   "type": "module",
   "engines": {
