--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "remix-serve ./build/server/index.js",
+    "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js",
     "start:with-db": "chmod +x start.sh && ./start.sh",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
