Fix localhost binding issue - bind to 0.0.0.0 for external access

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js",
+    "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js --host 0.0.0.0",
     "start:with-db": "chmod +x start.sh && ./start.sh",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
@@ -75,5 +75,6 @@
     "@graphql-codegen/typescript-operations": "4.5.0",
     "minimatch": "9.0.5"
   },
-  "author": "siddhantbajaj"
+  "author": "siddhantbajaj",
+  "version": "1.0.1"
 }
