--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-    "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js --host 0.0.0.0",
+    "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js --host 0.0.0.0 --port 3000",
     "start:with-db": "chmod +x start.sh && ./start.sh",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
@@ -76,5 +76,5 @@
     "minimatch": "9.0.5"
   },
   "author": "siddhantbajaj",
-  "version": "1.0.2"
+  "version": "1.0.3"
 }
