--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "deploy": "shopify app deploy",
     "config:use": "shopify app config use",
     "env": "shopify app env",
-            "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js --host 0.0.0.0 --port 3000",
+            "start": "npx prisma generate && npx prisma db push && remix-serve ./build/server/index.js --host 0.0.0.0 --port $PORT",
     "docker-start": "npm run setup && npm run start",
     "setup": "prisma generate && prisma migrate deploy",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
@@ -75,5 +75,5 @@
     "minimatch": "9.0.5"
   },
   "author": "siddhantbajaj",
-  "version": "1.0.6"
+  "version": "1.0.8"
 }
