--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -18,3 +18,8 @@ scopes = "customer_read_customers,customer_read_orders,customer_read_store_credi
 
 [auth]
 redirect_urls = [ "https://shop-chat-agent-whatsapp-j6ftf.ondigitalocean.app/api/auth" ]
+
+[mcp.customer_authentication]
+redirect_uris = [
+  "https://shop-chat-agent-whatsapp-j6ftf.ondigitalocean.app/callback"
+]
