--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -7,7 +7,7 @@ application_url = "https://shop-chat-agent-whatsapp-j6ftf.ondigitalocean.app"
 embedded = true
 
 [build]
-automatically_update_urls_on_dev = true
+automatically_update_urls_on_dev = false
 
 [webhooks]
 api_version = "2025-10"
