Add Broadcast Center POC UI with in-memory log endpoint and fix deprecated customer_authentication config

--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -19,7 +19,7 @@ scopes = "customer_read_customers,customer_read_orders,customer_read_store_credi
 [auth]
 redirect_urls = [ "https://shop-chat-agent-whatsapp-j6ftf.ondigitalocean.app/api/auth" ]
 
-[mcp.customer_authentication]
+[customer_authentication]
 redirect_uris = [
   "https://shop-chat-agent-whatsapp-j6ftf.ondigitalocean.app/auth/callback"
 ]
